<resources>
    <string name="app_name">IVS Real-time</string>
    <string name="audio_room">Audio room</string>
    <string name="audio_stage">Audio stage</string>
    <string name="auto">Auto</string>
    <string name="back_button">Back Button</string>
    <string name="button_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_stage">Create new stage</string>
    <string name="dismiss">Dismiss</string>
    <string name="dsc_exit_button">Exit Button</string>
    <string name="dsc_heart_button">Heart Button</string>
    <string name="dsc_join_seat">Join Seat</string>
    <string name="dsc_microphone_button">Microphone Button</string>
    <string name="dsc_qr_button">QR Button</string>
    <string name="dsc_refresh_button">Refresh Button</string>
    <string name="dsc_settings_button">Settings Button</string>
    <string name="dsc_switch_camera_button">Switch Camera Button</string>
    <string name="dsc_video_button">Video Button</string>
    <string name="end_stage">End stage</string>
    <string name="end_stage_for_everyone">End stage for everyone</string>
    <string name="enter_customer_code">Enter customer code</string>
    <string name="err_cast_vote">Failed to cast vote</string>
    <string name="err_create_stage">Failed to create new stage</string>
    <string name="err_customer_code">Invalid code</string>
    <string name="err_delete_stage">Failed to delete stage</string>
    <string name="err_get_stages">Failed to get stages</string>
    <string name="err_join_chat">Failed to join chat</string>
    <string name="err_join_stage">Failed to join stage</string>
    <string name="err_kick_participant">Failed to remove guest</string>
    <string name="err_leave_stage">Failed to leave stage</string>
    <string name="err_update_mode">Failed to update stage mode</string>
    <string name="err_update_seats">Failed to update seat</string>
    <string name="get_started">Get started</string>
    <string name="guest_spot">Guest spot</string>
    <string name="ivs">"IVS "</string>
    <string name="join_stage_as">Join stage as</string>
    <string name="join_stage_feed_view">Join stage (feed view)</string>
    <string name="leave_current_room">Leave current room</string>
    <string name="leave_current_stage">Leave current stage</string>
    <string name="leave_room">Leave room</string>
    <string name="leave_stage">Leave stage</string>
    <string name="maximum_bitrate">Maximum bitrate</string>
    <string name="paste_your_code_here">Paste your code here…</string>
    <string name="pk_vs_mode">PK/VS mode</string>
    <string name="real_time">Real-time</string>
    <string name="remove">Remove</string>
    <string name="remove_participant">Remove participant</string>
    <string name="say_something">Say something…</string>
    <string name="select_experience">Select experience</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="simulcast">Simulcast</string>
    <string name="video_latency_pattern">[%1$sms]</string>
    <string name="video_stage">Video stage</string>
    <string name="video_stats">Video stats</string>
    <string name="video_stats_pattern">[%1$s TTV] [%2$sms]</string>
    <string name="welcome_to_ivs_real_time">Welcome to\nIVS Real-time</string>
    <string name="local_debug_data">Local debug data</string>
    <string name="local_debug_data_description">Copy to clipboard for all available debug data</string>
    <string name="sdk_version">SDK version</string>
    <string name="ms_template">%1$sms</string>
    <string name="s_template">%1$ss</string>
    <string name="percentage_template">%1$s\%%</string>
    <string name="details_template">%1$s details</string>
    <string name="stream_quality">Stream quality</string>
    <string name="cpu_limited_time">CPU-limited time</string>
    <string name="network_limited_time">Network-limited time</string>
    <string name="packets_lost">Packets lost</string>
    <string name="fps">FPS</string>
    <string name="latency">Latency (roundtrip)</string>
    <string name="host_details">Host details</string>
    <string name="guest_details">Guest details</string>
</resources>
