<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_square_white_dark"
    android:clipToPadding="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:layout_gravity="bottom">

    <TextView
        style="@style/TextStyle.Title.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/join_stage_as" />

    <TextView
        android:id="@+id/guest_button"
        style="@style/ButtonStyle.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/guest_spot" />

    <TextView
        android:id="@+id/pk_button"
        style="@style/ButtonStyle.Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/pk_vs_mode" />

    <TextView
        android:id="@+id/cancel_join_button"
        style="@style/ButtonStyle.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
