<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_square_white_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    tools:layout_gravity="bottom">

    <TextView
        style="@style/TextStyle.Title.Subtitle"
        android:id="@+id/leave_delete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/leave_current_stage" />

    <TextView
        android:id="@+id/leave_delete_button"
        style="@style/ButtonStyle.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/leave_stage" />

    <TextView
        android:id="@+id/cancel_button"
        style="@style/ButtonStyle.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
